--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </tr>
   </table>
   <hr>
-  <p><a href="Hobbies.html">Hobbies</a>|<a href="Mydetails.html">My Contact</a></p>
+  <p><a href="hobbies.html">Hobbies</a>|<a href="Mydetails.html">My Contact</a></p>
 
 </body>
 
